--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 			<div class="content opacity">
 			<h4 class="t2">Sobre mí<div class="borde"></div></h4>
 
-			<p class="p1">Soy un estudiante, entusiasta la tecnología y la innovación.
-			Me he dedicado al diseño web y desarrollo frontend desde hace más de 3 años participando en proyectos donde he tenido que desenvolverme en distintos entornos y realizando diferentes tareas. Me gustaría formar parte de un equipo donde se incentive la innovación y la creatividad.</p>
+			<p class="p1">Soy un estudiante, entusiasta de la tecnología y la innovación.
+			Me he dedicado al diseño web y desarrollo FrontEnd desde hace más de 3 años participando en proyectos donde he tenido que desenvolverme en distintos entornos y realizando diferentes tareas. Me gustaría formar parte de un equipo donde se incentive la innovación y la creatividad.</p>
 			<div class="Skills">
 				<span class="s1">Honestidad</span>
 				<span class="s2">Trabajo en equipo</span>
