new index meta changes
new meta photo

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8">	
+	<meta property="og:title" content="Miguel Briceño - Web FrontEnd">
+	<meta property="og:description" content="Desarrollador web frontEnd con 3 años de experiencia">
+	<meta property="og:image" content="media/img1.jpg">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<link rel="stylesheet" href="css/styles.css">
     <title>Miguel Briceño / Web FrontEnd</title>
